--- a/src/main/resources/templates/MaterialOrder/show.html
+++ b/src/main/resources/templates/MaterialOrder/show.html
@@ -44,7 +44,7 @@ document.addEventListener("DOMContentLoaded", function() {
                                     <thead>
                                     <tr>
                                         <th>Поръчка</th>
-                                        <th>Материал</th>
+                                        <th>Материал  ID</th>
                                         <th>Вид материал</th>
                                         <th>Поръчан брой</th>
                                     </tr>
@@ -88,7 +88,7 @@ document.addEventListener("DOMContentLoaded", function() {
                                     <thead>
                                     <tr>
                                         <th>Поръчка</th>
-                                        <th>Материал</th>
+                                        <th>Материал  ID </th>
                                         <th>Вид материал</th>
                                         <th>Поръчан брой</th>
                                         <th>Доставен брой</th>
