--- a/src/main/resources/templates/Client/show.html
+++ b/src/main/resources/templates/Client/show.html
@@ -1,176 +1,182 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-  <!--    LINKS  -->
-  <th:block th:insert="~{fragments/links}"></th:block>
+    <!--    LINKS  -->
+    <th:block th:insert="~{fragments/links}"></th:block>
 
-  <title> Клиенти </title>
-  <link rel="icon" type="image/x-icon" href="/img/photos/noImage.png">
-  <link href="/css/show.css" rel="stylesheet">
+    <title> Клиенти </title>
+    <link rel="icon" type="image/x-icon" href="/img/photos/noImage.png">
+    <link href="/css/show.css" rel="stylesheet">
 </head>
 <script>
-document.addEventListener("DOMContentLoaded", function() {
-    const navbar = document.getElementById("sidebar");
-    console.log(navbar);
-    const toggler = document.querySelector("a.sidebar-toggle");
-    toggler.addEventListener("click", () => {
-    navbar.classList.toggle("collapsed");
+    document.addEventListener("DOMContentLoaded", function() {
+        const navbar = document.getElementById("sidebar");
+        console.log(navbar);
+        const toggler = document.querySelector("a.sidebar-toggle");
+        toggler.addEventListener("click", () => {
+        navbar.classList.toggle("collapsed");
+        });
     });
-});
 </script>
 <body>
 <div class="wrapper">
-  <!--    HEADER  -->
-  <th:block th:insert="~{fragments/header}"></th:block>
+    <!--    HEADER  -->
+    <th:block th:insert="~{fragments/header}"></th:block>
 
 
-  <div class="main">
-    <nav class="navbar navbar-expand navbar-light navbar-bg">
-      <a class="sidebar-toggle js-sidebar-toggle">
-        <i class="hamburger align-self-center"></i>
-      </a>
-    </nav>
-    <main class="content">
-        <div class="row">
-          <div class="col-lg-13 mx-auto">
-            <div class="card custom-card-width-lg">
-              <div class="card-header">
-                <h5 class="card-title mb-0">Всички клиенти</h5>
-              </div>
-              <div class="text-center">
-                <a href="/client/create" class="btn btn-primary">Добави Клиент</a>
-              </div><br>
-              <th:block th:if="${session.sessionToken != null and session.sessionRole == 'ADMIN'}">
-                <div class="text-center">
-                  <a href="/customerCustomPrice/create" class="btn btn-warning">Персонализиране на цени</a>
-                </div>
-              <div class="card-body">
-                <div class="row mb-3">
-                  <div class="col">
-                    <input type="text" id="searchInput1" class="form-control" placeholder="Търсене по колона Български клиент"><br>
-                    <div class="alert alert-primary" role="alert">
-                      <label>Резултати от търсенето: <span id="resultsCount"></span></label>
+    <div class="main">
+        <nav class="navbar navbar-expand navbar-light navbar-bg">
+            <a class="sidebar-toggle js-sidebar-toggle">
+                <i class="hamburger align-self-center"></i>
+            </a>
+        </nav>
+        <main class="content">
+            <div class="row">
+                <div class="col-lg-13 mx-auto">
+                    <div class="card custom-card-width-lg">
+                        <div class="card-header">
+                            <h5 class="card-title mb-0">Всички клиенти</h5>
+                        </div>
+                        <div class="text-center">
+                            <a href="/client/create" class="btn btn-primary">Добави Клиент</a>
+                        </div>
+                        <div class="card-body">
+                            <div class="row mb-3">
+                                <div class="col">
+                                    <input type="text" id="searchInput1" class="form-control"
+                                           placeholder="Търсене по колона Български клиент"><br>
+                                    <div class="alert alert-primary" role="alert">
+                                        <label>Резултати от търсенето: <span id="resultsCount"></span></label>
+                                    </div>
+                                </div>
+                                <div class="col">
+                                    <input type="text" id="searchInput2" class="form-control"
+                                           placeholder="Търсене по име на фирма"><br>
+                                    <div class="alert alert-primary" role="alert">
+                                        <label>Резултати от търсенето: <span id="resultsCount2"></span></label>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="table-responsive">
+                                <table class="table">
+                                    <thead>
+                                    <tr>
+                                        <th>ID</th>
+                                        <th>Име на фирма</th>
+                                        <th>Ид. Номер по ЕИК</th>
+                                        <th>Ид. Номер по ДДС</th>
+                                        <th>Адрес</th>
+                                        <th>Български клиент</th>
+                                        <th>МОЛ</th>
+                                    </tr>
+                                    </thead>
+                                    <tbody>
+                                    <tr th:each="client : ${clients}" data-id="${client.id}" class="client-row">
+                                        <td th:text="${client.id}"></td>
+                                        <td th:text="${client.isBulgarianClient ? client.businessName : client.englishBusinessName}"></td>
+                                        <td th:text="${client.idNumEIK}"></td>
+                                        <td th:text="${client.hasIdNumDDS ? 'BG' + client.idNumEIK : 'няма'}"></td>
+                                        <td th:text="${client.isBulgarianClient ? client.address : client.englishAddress}"></td>
+                                        <td th:text="${client.isBulgarianClient ? 'ДА' : 'НЕ'}"></td>
+                                        <td th:text="${client.isBulgarianClient ? client.mol : client.englishMol}"></td>
+                                        <td>
+                                            <form th:action="@{'/client/delete/' + ${client.id}}" method="post"
+                                                  th:attr="onsubmit='return confirm(\'Сигурни ли сте, че искате да изтриете клинет с id: ' + ${client.id} + '?\');'">
+                                                <button type="submit" class="btn btn-danger">Изтрий</button>
+                                            </form>
+                                        </td>
+                                        <td>
+                                            <form th:action="@{'/client/editClient/' + ${client.id}}" method="get"
+                                                  th:attr="onsubmit='return confirm(\'Сигурни ли сте, че искате да редактирате клинет с id: ' + ${client.id} + '?\');'">
+                                                <button type="submit" class="btn btn-primary">Редактирай</button>
+                                            </form>
+                                        </td>
+                                        <td>
+                                            <form th:action="@{'/customerCustomPrice/allForClient/' + ${client.id}}"
+                                                  method="get"
+                                                  th:attr="onsubmit='return confirm(\'Сигурни ли сте, че искате да видите персонализираните цени за клинет с id: ' + ${client.id} + '?\');'">
+                                                <button type="submit" class="btn btn-primary">Виж персонализирани цени
+                                                </button>
+                                            </form>
+                                        </td>
+                                    </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
                     </div>
-                  </div>
-                  <div class="col">
-                    <input type="text" id="searchInput2" class="form-control" placeholder="Търсене по име на фирма"><br>
-                    <div class="alert alert-primary" role="alert">
-                      <label>Резултати от търсенето: <span id="resultsCount2"></span></label>
-                    </div>
-                  </div>
                 </div>
-                <div class="table-responsive">
-                  <table class="table">
-                  <thead>
-                  <tr>
-                    <th>ID</th>
-                    <th>Име на фирма</th>
-                    <th>Ид. Номер по ЕИК</th>
-                    <th>Ид. Номер по ДДС</th>
-                    <th>Адрес</th>
-                    <th>Български клиент</th>
-                    <th>МОЛ</th>
-                  </tr>
-                  </thead>
-                  <tbody>
-                  <tr th:each="client : ${clients}" data-id="${client.id}" class="client-row">
-                    <td th:text="${client.id}"></td>
-                    <td th:text="${client.isBulgarianClient ? client.businessName : client.englishBusinessName}"></td>
-                    <td th:text="${client.idNumEIK}"></td>
-                    <td th:text="${client.hasIdNumDDS ? 'BG' + client.idNumEIK : 'няма'}"></td>
-                    <td th:text="${client.isBulgarianClient ? client.address : client.englishAddress}"></td>
-                    <td th:text="${client.isBulgarianClient ? 'ДА' : 'НЕ'}"></td>
-                    <td th:text="${client.isBulgarianClient ? client.mol : client.englishMol}"></td>
-                    <td>
-                      <form th:action="@{'/client/delete/' + ${client.id}}" method="post"
-                            th:attr="onsubmit='return confirm(\'Сигурни ли сте, че искате да изтриете клинет с id: ' + ${client.id} + '?\');'">
-                        <button type="submit" class="btn btn-danger">Изтрий</button>
-                      </form>
-                    </td>
-                    <td>
-                      <form th:action="@{'/client/editClient/' + ${client.id}}" method="get"
-                            th:attr="onsubmit='return confirm(\'Сигурни ли сте, че искате да редактирате клинет с id: ' + ${client.id} + '?\');'">
-                        <button type="submit" class="btn btn-primary">Редактирай</button>
-                      </form>
-                    </td>
-                  </tr>
-                  </tbody>
-                </table>
-              </div>
             </div>
-          </div>
-        </div>
-      </div>
-    </main>
-  </div>
+        </main>
+    </div>
 </div>
 <script src="/js/app.js"></script>
 <script>
-      document.getElementById('searchInput2').addEventListener('input', function () {
-    var input, filter, table, tr, td, i, txtValue;
-    input = document.getElementById('searchInput2');
-    filter = input.value.toUpperCase();
-    table = document.querySelector('table');
-    tr = table.getElementsByTagName('tr');
-    var count = 0; // Initialize the count variable
+    document.getElementById('searchInput2').addEventListener('input', function () {
+  var input, filter, table, tr, td, i, txtValue;
+  input = document.getElementById('searchInput2');
+  filter = input.value.toUpperCase();
+  table = document.querySelector('table');
+  tr = table.getElementsByTagName('tr');
+  var count = 0; // Initialize the count variable
 
-    for (i = 0; i < tr.length; i++) {
-        td = tr[i].getElementsByTagName('td')[1];
-        if (td) {
-            txtValue = td.textContent || td.innerText;
-            if (txtValue.toUpperCase().indexOf(filter) > -1) {
-                tr[i].style.display = '';
-                count++; // Increment the count when a match is found
-            } else {
-                tr[i].style.display = 'none';
-            }
-        }
-    }
+  for (i = 0; i < tr.length; i++) {
+      td = tr[i].getElementsByTagName('td')[1];
+      if (td) {
+          txtValue = td.textContent || td.innerText;
+          if (txtValue.toUpperCase().indexOf(filter) > -1) {
+              tr[i].style.display = '';
+              count++; // Increment the count when a match is found
+          } else {
+              tr[i].style.display = 'none';
+          }
+      }
+  }
 
-    // Display the results count for the second search input
-    var resultsCountElement = document.getElementById('resultsCount2');
-    if (resultsCountElement) {
-        resultsCountElement.textContent = count;
-    } else {
-        // If the element doesn't exist, you can create and append it
-        resultsCountElement = document.createElement('div');
-        resultsCountElement.id = 'resultsCount2';
-        resultsCountElement.textContent = count;
-        input.parentNode.appendChild(resultsCountElement); // Appending to the parent of the input
-    }
+  // Display the results count for the second search input
+  var resultsCountElement = document.getElementById('resultsCount2');
+  if (resultsCountElement) {
+      resultsCountElement.textContent = count;
+  } else {
+      // If the element doesn't exist, you can create and append it
+      resultsCountElement = document.createElement('div');
+      resultsCountElement.id = 'resultsCount2';
+      resultsCountElement.textContent = count;
+      input.parentNode.appendChild(resultsCountElement); // Appending to the parent of the input
+  }
 });
-    document.getElementById('searchInput1').addEventListener('input', function () {
-    var input, filter, table, tr, td, i, txtValue;
-    input = document.getElementById('searchInput1');
-    filter = input.value.toUpperCase();
-    table = document.querySelector('table');
-    tr = table.getElementsByTagName('tr');
-    var count = 0; // Initialize the count variable
+  document.getElementById('searchInput1').addEventListener('input', function () {
+  var input, filter, table, tr, td, i, txtValue;
+  input = document.getElementById('searchInput1');
+  filter = input.value.toUpperCase();
+  table = document.querySelector('table');
+  tr = table.getElementsByTagName('tr');
+  var count = 0; // Initialize the count variable
 
-    for (i = 0; i < tr.length; i++) {
-        td = tr[i].getElementsByTagName('td')[5];
-        if (td) {
-            txtValue = td.textContent || td.innerText;
-            if (txtValue.toUpperCase().indexOf(filter) > -1) {
-                tr[i].style.display = '';
-                count++; // Increment the count when a match is found
-            } else {
-                tr[i].style.display = 'none';
-            }
-        }
-    }
+  for (i = 0; i < tr.length; i++) {
+      td = tr[i].getElementsByTagName('td')[5];
+      if (td) {
+          txtValue = td.textContent || td.innerText;
+          if (txtValue.toUpperCase().indexOf(filter) > -1) {
+              tr[i].style.display = '';
+              count++; // Increment the count when a match is found
+          } else {
+              tr[i].style.display = 'none';
+          }
+      }
+  }
 
-    // Display the results count
-    var resultsCountElement = document.getElementById('resultsCount');
-    if (resultsCountElement) {
-        resultsCountElement.textContent = count;
-    } else {
-        // If the element doesn't exist, you can create and append it
-        resultsCountElement = document.createElement('div');
-        resultsCountElement.id = 'resultsCount';
-        resultsCountElement.textContent = count;
-        input.parentNode.appendChild(resultsCountElement); // Appending to the parent of the input
-    }
+  // Display the results count
+  var resultsCountElement = document.getElementById('resultsCount');
+  if (resultsCountElement) {
+      resultsCountElement.textContent = count;
+  } else {
+      // If the element doesn't exist, you can create and append it
+      resultsCountElement = document.createElement('div');
+      resultsCountElement.id = 'resultsCount';
+      resultsCountElement.textContent = count;
+      input.parentNode.appendChild(resultsCountElement); // Appending to the parent of the input
+  }
 });
 </script>
 </body>
