--- a/src/main/resources/templates/CustomPrice/edit.html
+++ b/src/main/resources/templates/CustomPrice/edit.html
@@ -57,7 +57,7 @@
 
                                 <div class="form-group">
                                     <label for="price">Цена</label>
-                                    <input type="number" class="form-control" id="price" name="price"
+                                    <input type="number" class="form-control" id="price" th:field="*{price}"
                                            required min="0" step="0.01"/>
                                 </div>
                             </center>
