--- a/src/main/resources/templates/User/show.html
+++ b/src/main/resources/templates/User/show.html
@@ -66,31 +66,40 @@ document.addEventListener("DOMContentLoaded", function() {
                                         <th>Адрес</th>
                                         <th>Е-поща</th>
                                         <th>Роля</th>
+                                        <th>Управител на Фирма </th>
                                     </tr>
                                     </thead>
-                                    <tbody>
-                                    <tr th:each="user : ${users}">
-                                        <td th:text="${user.id}"></td>
-                                        <td th:text="${user.username}"></td>
-                                        <td th:text="${user.firstname}"></td>
-                                        <td th:text="${user.lastname}"></td>
-                                        <td th:text="${user.address}"></td>
-                                        <td th:text="${user.email}"></td>
-                                        <td th:text="${user.role}"></td>
-                                        <td>
-                                            <form th:action="@{'/user/delete/' + ${user.id}}" method="post"
-                                                  th:attr="onsubmit='return confirm(\'Сигурни ли сте, че искате да изтриете Потребител с име: ' + ${user.firstname} + '?\');'">
-                                                <button type="submit" class="btn btn-danger">Изтрий</button>
-                                            </form>
-                                        </td>
-                                        <td>
-                                            <form th:action="@{'/user/editUser/' + ${user.id}}" method="get"
-                                                  th:attr="onsubmit='return confirm(\'Сигурни ли сте, че искате да редактирате Потребител с име: ' + ${user.firstname} + '?\');'">
-                                                <button type="submit" class="btn btn-primary">Редактирай</button>
-                                            </form>
-                                        </td>
-                                    </tr>
-                                    </tbody>
+                                        <tbody>
+                                        <tr th:each="user : ${users}">
+                                            <td th:text="${user.id}"></td>
+                                            <td th:text="${user.username}"></td>
+                                            <td th:text="${user.firstname}"></td>
+                                            <td th:text="${user.lastname}"></td>
+                                            <td th:text="${user.address}"></td>
+                                            <td th:text="${user.email}"></td>
+                                            <td th:text="${user.role}"></td>
+                                            <td>
+        <span th:if="${user.clientID != null}">
+            <span th:each="client : ${clients}"
+                  th:if="${client.id == user.clientID}"
+                  th:text="${client.businessName}"></span>
+        </span>
+                                                <span th:if="${user.clientID == null}"></span>
+                                            </td>
+                                            <td>
+                                                <form th:action="@{'/user/delete/' + ${user.id}}" method="post"
+                                                      th:attr="onsubmit='return confirm(\'Сигурни ли сте, че искате да изтриете Потребител с име: ' + ${user.firstname} + '?\');'">
+                                                    <button type="submit" class="btn btn-danger">Изтрий</button>
+                                                </form>
+                                            </td>
+                                            <td>
+                                                <form th:action="@{'/user/editUser/' + ${user.id}}" method="get"
+                                                      th:attr="onsubmit='return confirm(\'Сигурни ли сте, че искате да редактирате Потребител с име: ' + ${user.firstname} + '?\');'">
+                                                    <button type="submit" class="btn btn-primary">Редактирай</button>
+                                                </form>
+                                            </td>
+                                        </tr>
+                                        </tbody>
                                 </table>
                             </div>
                         </div>
