--- a/src/main/resources/static/css/clientShowById.css
+++ b/src/main/resources/static/css/clientShowById.css
@@ -78,3 +78,42 @@
         display: inline-block;
         color: #333333;
     }
+     .flex-container {
+                display: flex;
+                justify-content: space-between; /* Разделя колони */
+                margin-bottom: 20px; /* Разстояние между редовете */
+            }
+
+            .left-column, .right-column {
+                width: 48%; /* Широчина на колоните */
+            }
+
+            .left-column {
+                padding: 15px; /* Увеличаване на полетата с малко padding */
+                border: 1px solid #ccc; /* Добавяне на рамка около колоната */
+                border-radius: 5px; /* Закръгляне на ъглите */
+                background-color: #f9f9f9; /* Фон на колоната */
+            }
+
+            .right-column {
+                padding: 15px; /* Увеличаване на полетата с малко padding */
+                border: 1px solid #ccc; /* Добавяне на рамка около колоната */
+                border-radius: 5px; /* Закръгляне на ъглите */
+                background-color: #f9f9f9; /* Фон на колоната */
+            }
+
+            .separator {
+                width: 1px; /* Широчина на разделителната лента */
+                background-color: #ccc; /* Цвят на разделителя */
+                height: auto; /* Автоматична височина */
+                margin: 0 20px; /* Разстояние от двете страни */
+            }
+
+            strong {
+                display: block; /* Показва всяко заглавие на нов ред */
+            }
+
+            .header-profile {
+                font-size: 1.5rem; /* Увеличава размера на заглавието на профила */
+                margin-top: 10px; /* Разстояние от предишните елементи */
+            }
