--- a/src/main/resources/templates/User/show.html
+++ b/src/main/resources/templates/User/show.html
@@ -68,7 +68,7 @@
                                         <th>Адрес</th>
                                         <th>Е-поща</th>
                                         <th>Роля</th>
-                                        <th>Управител на Фирма</th>
+                                        <th>Управляващ на Профил</th>
                                     </tr>
                                     </thead>
                                     <tbody>
