--- a/src/main/resources/templates/Client/show.html
+++ b/src/main/resources/templates/Client/show.html
@@ -57,42 +57,49 @@ document.addEventListener("DOMContentLoaded", function() {
                 </div>
                 <div class="table-responsive">
                   <table class="table">
-                  <thead>
-                  <tr>
-                    <th>ID</th>
-                    <th>Име на фирма</th>
-                    <th>Ид. Номер по ЕИК</th>
-                    <th>Ид. Номер по ДДС</th>
-                    <th>Адрес</th>
-                    <th>Български клиент</th>
-                    <th>МОЛ</th>
-                  </tr>
-                  </thead>
-                  <tbody>
-                  <tr th:each="client : ${clients}" data-id="${client.id}" class="client-row">
-                    <td th:text="${client.id}"></td>
-                    <td th:text="${client.isBulgarianClient ? client.businessName : client.englishBusinessName}"></td>
-                    <td th:text="${client.idNumEIK}"></td>
-                    <td th:text="${client.hasIdNumDDS ? 'BG' + client.idNumEIK : 'няма'}"></td>
-                    <td th:text="${client.isBulgarianClient ? client.address : client.englishAddress}"></td>
-                    <td th:text="${client.isBulgarianClient ? 'ДА' : 'НЕ'}"></td>
-                    <td th:text="${client.isBulgarianClient ? client.mol : client.englishMol}"></td>
-                    <td>
-                      <form th:action="@{'/client/delete/' + ${client.id}}" method="post"
-                            th:attr="onsubmit='return confirm(\'Сигурни ли сте, че искате да изтриете клинет с id: ' + ${client.id} + '?\');'">
-                        <button type="submit" class="btn btn-danger">Изтрий</button>
-                      </form>
-                    </td>
-                    <td>
-                      <form th:action="@{'/client/editClient/' + ${client.id}}" method="get"
-                            th:attr="onsubmit='return confirm(\'Сигурни ли сте, че искате да редактирате клинет с id: ' + ${client.id} + '?\');'">
-                        <button type="submit" class="btn btn-primary">Редактирай</button>
-                      </form>
-                    </td>
-                  </tr>
-                  </tbody>
-                </table>
-              </div>
+                    <thead>
+                    <tr>
+                      <th>ID</th>
+                      <th>Име на фирма</th>
+                      <th>Ид. Номер по ЕИК</th>
+                      <th>Ид. Номер по ДДС</th>
+                      <th>Адрес</th>
+                      <th>Български клиент</th>
+                      <th>МОЛ</th>
+                      <th>Телефон за контакт</th> <!-- New field -->
+                      <th>Адрес за доставка</th>  <!-- New field -->
+                      <th>Допълнителна информация</th> <!-- New field -->
+                      <th>Действия</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr th:each="client : ${clients}" data-id="${client.id}" class="client-row">
+                      <td th:text="${client.id}"></td>
+                      <td th:text="${client.isBulgarianClient ? client.businessName : client.englishBusinessName}"></td>
+                      <td th:text="${client.idNumEIK}"></td>
+                      <td th:text="${client.hasIdNumDDS ? 'BG' + client.idNumEIK : 'няма'}"></td>
+                      <td th:text="${client.isBulgarianClient ? client.address : client.englishAddress}"></td>
+                      <td th:text="${client.isBulgarianClient ? 'ДА' : 'НЕ'}"></td>
+                      <td th:text="${client.isBulgarianClient ? client.mol : client.englishMol}"></td>
+                      <td th:text="${client.contactPhone}"></td> <!-- Display contactPhone -->
+                      <td th:text="${client.deliveryAddress}"></td> <!-- Display deliveryAddress -->
+                      <td th:text="${client.information}"></td> <!-- Display information -->
+                      <td>
+                        <form th:action="@{'/client/delete/' + ${client.id}}" method="post"
+                              th:attr="onsubmit='return confirm(\'Сигурни ли сте, че искате да изтриете клинет с id: ' + ${client.id} + '?\');'">
+                          <button type="submit" class="btn btn-danger">Изтрий</button>
+                        </form>
+                      </td>
+                      <td>
+                        <form th:action="@{'/client/editClient/' + ${client.id}}" method="get"
+                              th:attr="onsubmit='return confirm(\'Сигурни ли сте, че искате да редактирате клинет с id: ' + ${client.id} + '?\');'">
+                          <button type="submit" class="btn btn-primary">Редактирай</button>
+                        </form>
+                      </td>
+                    </tr>
+                    </tbody>
+                  </table>
+                </div>
             </div>
           </div>
         </div>
