--- a/src/main/resources/templates/Client/create.html
+++ b/src/main/resources/templates/Client/create.html
@@ -10,53 +10,47 @@
     <link href="/css/form.css" rel="stylesheet">
 </head>
 <script>
-document.addEventListener("DOMContentLoaded", function() {
-    const navbar = document.getElementById("sidebar");
-    console.log(navbar);
-    const toggler = document.querySelector("a.sidebar-toggle");
-    toggler.addEventListener("click", () => {
-    navbar.classList.toggle("collapsed");
+    document.addEventListener("DOMContentLoaded", function() {
+        const navbar = document.getElementById("sidebar");
+        console.log(navbar);
+        const toggler = document.querySelector("a.sidebar-toggle");
+        toggler.addEventListener("click", () => {
+        navbar.classList.toggle("collapsed");
+        });
     });
-});
-
-
 </script>
 <style>
-        /* Style to hide English fields by default */
-        .english-field {
-            display: none;
-        }
-
-
+    /* Style to hide English fields by default */
+    .english-field {
+        display: none;
+    }
 </style>
 
 <script>
-        function showHideFields() {
-            var isBulgarianClient = document.querySelector('input[name="isBulgarianClient"]:checked').value;
-            var englishFields = document.querySelectorAll('.english-field');
-            var bulgarianFields = document.querySelectorAll('.bulgarian-field');
+    function showHideFields() {
+        var isBulgarianClient = document.querySelector('input[name="isBulgarianClient"]:checked').value;
+        var englishFields = document.querySelectorAll('.english-field');
+        var bulgarianFields = document.querySelectorAll('.bulgarian-field');
 
-            // Check if the client is from Bulgaria
-            if (isBulgarianClient === "true") {
-                // Hide the English fields
-                englishFields.forEach(function(field) {
-                    field.style.display = 'none';
-                    })
-             bulgarianFields.forEach(function(field) {
-                    field.style.display = 'block';
-                    })
-               ;
-            } else {
-                // Show all fields except the English ones
-                englishFields.forEach(function(field) {
-                    field.style.display = 'block';
-                })
-                bulgarianFields.forEach(function(field) {
-                    field.style.display = 'none';
-                    })
-                ;
-            }
-            var idNumEIKInput = document.getElementById('idNumEIK');
+        // Check if the client is from Bulgaria
+        if (isBulgarianClient === "true") {
+            // Hide the English fields
+            englishFields.forEach(function(field) {
+                field.style.display = 'none';
+            })
+            bulgarianFields.forEach(function(field) {
+                field.style.display = 'block';
+            });
+        } else {
+            // Show all fields except the English ones
+            englishFields.forEach(function(field) {
+                field.style.display = 'block';
+            })
+            bulgarianFields.forEach(function(field) {
+                field.style.display = 'none';
+            });
+        }
+        var idNumEIKInput = document.getElementById('idNumEIK');
 
         // Clear previous validation messages
         var errorMessage = document.querySelector('.error-message');
@@ -70,7 +64,7 @@ document.addEventListener("DOMContentLoaded", function() {
             idNumEIKInput.pattern = '.{5,}';
             idNumEIKInput.title = 'Номера по ЕИК трябва да бъде последователност от 5 знака!';
         }
-        }
+    }
 </script>
 <body>
 <div class="wrapper">
@@ -111,7 +105,7 @@ document.addEventListener("DOMContentLoaded", function() {
                             </div>
 
                             <div class="form-group english-field">
-                                <label for="englishAddress">Адрес на англсийски език:</label>
+                                <label for="englishAddress">Адрес на английски език:</label>
                                 <input type="text" id="englishAddress" name="englishAddress"/>
                             </div>
 
@@ -133,7 +127,7 @@ document.addEventListener("DOMContentLoaded", function() {
                             </div>
                             <div class="form-group bulgarian-field">
                                 <label for="mol">МОЛ:</label>
-                                <input type="text" id="mol" name="address"
+                                <input type="text" id="mol" name="mol"
                                        th:field="${client.mol}"/>
                             </div>
                             <div class="form-group">
@@ -141,6 +135,20 @@ document.addEventListener("DOMContentLoaded", function() {
                                 <input type="text" id="idNumEIK" name="idNumEIK" pattern=".{5,}"
                                        title="Номера по ЕИК трябва да бъде последователност от 5 цифри!" required/>
                                 <div class="error-message"></div>
+                            </div>
+                            <div class="form-group">
+                                <label for="contactPhone">Телефон за връзка:</label>
+                                <input type="text" id="contactPhone" name="contactPhone" pattern="\\d{6,}"
+                                       title="Моля въведете валиден телефонен номер с поне 6 цифри!"/>
+                            </div>
+                            <div class="form-group">
+                                <label for="deliveryAddress">Адрес за доставка:</label>
+                                <input type="text" id="deliveryAddress" name="deliveryAddress"/>
+                            </div>
+
+                            <div class="form-group">
+                                <label for="information">Допълнителна информация:</label>
+                                <textarea id="information" name="information" rows="4" cols="50"></textarea>
                             </div>
                             <div class="form-check">
                                 <div class="form-group english-field">
